# ai-homeguard

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  version.py
backend/app/api/: __init__.py
backend/app/checks/: __init__.py  local_runner.py
backend/app/core/: __init__.py  command_runner.py  platform.py
backend/app/demo/: __init__.py  demo_report.py  device_inventory.py
backend/tests/: test_combined_report.py  test_combined_report_device_inventory.py  test_combined_report_network_awareness.py  test_cors.py  test_d3fend_catalog.py  test_demo_report.py  test_device_inventory_analyzer.py  test_device_inventory_demo.py  test_device_inventory_models.py  test_device_inventory_routes.py  test_device_inventory_safety.py  test_guidance_service.py  test_health.py  test_json_export.py  test_knowledge_routes.py  test_linux_checks.py  test_linux_report.py  test_local_check_safety.py  test_local_device_report.py  test_local_runner.py  test_macos_checks.py  test_macos_report.py  test_markdown_export.py  test_models.py  test_network_awareness.py  test_network_context.py  test_network_discovery.py  test_network_discovery_guardrails.py  test_network_discovery_report.py  test_network_discovery_routes.py  test_network_guardrails.py  test_network_routes.py  test_questionnaire.py  test_questionnaire_report.py  test_report_guidance_enrichment.py  test_report_merge.py  test_router_guidance.py  test_runtime_context.py  test_version.py  test_windows_checks.py  (+2 more)
(+124 files in other folders)
