[project]
name = "ai-homeguard-backend"
version = "0.1.0"
description = "FastAPI backend for AI HomeGuard."
readme = "../README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
